layout issues fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,14 @@
   @apply max-w-6xl mx-auto p-4 sm:px-6 px-4 sm:pb-4 pb-6;
 }
 
+.home {
+  background: url('./../public//homeImg.jpg');
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
 .movie-card {
   @apply bg-white overflow-hidden rounded-md shadow-md flex sm:flex-row flex-col;
 }
